Improved filehandling and reCAPTCHA

--- a/src/main/resources/templates/restaurants.html
+++ b/src/main/resources/templates/restaurants.html
@@ -19,9 +19,9 @@
 		</button>
 		<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 			<div class="navbar-nav">
-				<a class="nav-item nav-link" th:href="@{/reviews}">Reviews</a> <a
-					class="nav-item nav-link active" th:href="@{/restaurants}">Restaurants<span
-					class="sr-only">(current)</span></a>
+				<a class="nav-item nav-link" th:href="@{/reviews}">Reviews</a>
+				<a class="nav-item nav-link active" th:href="@{/restaurants}">Restaurants<span class="sr-only">(current)</span></a>
+				<a class="nav-item nav-link" th:href="@{/pictures}">User Pictures</a>
 			</div>
 		</div>
 		<span class="navbar-text" th:inline="text">Logged in as
