--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -61,8 +61,7 @@
 					Error</p>
 			</div>
 
-			<div class="g-recaptcha"
-				data-sitekey="6LeZQ6EUAAAAAHVZ2hgkX7_7GRKrU-8x2lZMqt6Z"></div>
+			<div class="g-recaptcha" data-sitekey="6LeZQ6EUAAAAAHVZ2hgkX7_7GRKrU-8x2lZMqt6Z"></div>
 
 			<input type="submit" class="btn btn-success" value="Signup"></input>
 		</form>
