--- a/src/main/resources/templates/addreview.html
+++ b/src/main/resources/templates/addreview.html
@@ -59,9 +59,9 @@
 		</button>
 		<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 			<div class="navbar-nav">
-				<a class="nav-item nav-link active" th:href="@{/reviews}">Reviews<span
-					class="sr-only">(current)</span></a> <a class="nav-item nav-link"
-					th:href="@{/restaurants}">Restaurants</a>
+				<a class="nav-item nav-link" th:href="@{/reviews}">Reviews</span></a>
+					<a class="nav-item nav-link" th:href="@{/restaurants}">Restaurants</a>
+					<a class="nav-item nav-link" th:href="@{/pictures}">User Pictures</a>
 			</div>
 		</div>
 		<span class="navbar-text" th:inline="text">Logged in as
@@ -133,11 +133,6 @@
 			<label for="reviewText">Review</label>
 			<textarea class="form-control" placeholder="Write your review..."
 				id="reviewText" rows="3" th:field="*{reviewText}"></textarea>
-		</div>
-
-		<div method="POST" action="/upload" enctype="multipart/form-data">
-			<input type="file" name="file" /><br /> <input type="submit"
-				value="Submit" />
 		</div>
 		<input type="submit" class="btn btn-success" value="Submit Review"></input>
 	</form>
