--- a/src/main/resources/templates/reviews.html
+++ b/src/main/resources/templates/reviews.html
@@ -28,9 +28,9 @@
 		</button>
 		<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 			<div class="navbar-nav">
-				<a class="nav-item nav-link active" th:href="@{/reviews}">Reviews<span
-					class="sr-only">(current)</span></a> <a class="nav-item nav-link"
-					th:href="@{/restaurants}">Restaurants</a>
+				<a class="nav-item nav-link active" th:href="@{/reviews}">Reviews<span class="sr-only">(current)</span></a>
+				<a class="nav-item nav-link" th:href="@{/restaurants}">Restaurants</a>
+				<a class="nav-item nav-link" th:href="@{/pictures}">User Pictures</a>
 			</div>
 		</div>
 		<span class="navbar-text" th:inline="text">Logged in as
