--- a/src/main/resources/templates/userpictures.html
+++ b/src/main/resources/templates/userpictures.html
@@ -40,7 +40,7 @@
 		<tr th:each="file: ${files}">
 			<td th:text="${file.fileName}"></td>
 			<td th:text="${file.mimeType}"></td>
-			<td><a th:href="@{/file/{id}(id=${file.id})}">Download</a></td>
+			<td><a th:href="@{/file/{id}(id=${file.fileId})}">Download</a></td>
 		</tr>
 	</table>
 	<a class="btn btn-sm btn-primary" href="/upload">Upload a picture</a>
