--- a/src/main/resources/templates/userpictures.html
+++ b/src/main/resources/templates/userpictures.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:th="http://www.thymeleaf.org">
 <head>
-<title></title>
+<title>User Pictures</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link rel="stylesheet"
 	href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
@@ -18,7 +18,7 @@
 		</button>
 		<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 			<div class="navbar-nav">
-				<a class="nav-item nav-link active" th:href="@{/reviews}">Reviews</a>
+				<a class="nav-item nav-link" th:href="@{/reviews}">Reviews</a>
 				<a class="nav-item nav-link" th:href="@{/restaurants}">Restaurants</a>
 				<a class="nav-item nav-link active" th:href="@{/pictures}">User Pictures<span class="sr-only">(current)</span></a>
 			</div>
