--- a/src/main/resources/templates/showreview.html
+++ b/src/main/resources/templates/showreview.html
@@ -141,7 +141,7 @@
 
 		var platform = new H.service.Platform({
 			app_id: 'hLsMrKhE2iRvZDBuc6Zh',
-			app_code: '3Adnnp4pvne2ab5_FPqvnQ',
+			app_code: '{your-id}',
 			useHTTPS : true
 		});
 		var pixelRatio = window.devicePixelRatio || 1;
